# budgeteer

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/budgeteer/: __init__.py  category_selector.py  cli.py  codegen.py  config.py  interactive.py  models.py  parsing.py  storage.py
src/budgeteer/interactive_components/: __init__.py  history.py  prompts.py  record.py
tests/: test_cli.py  test_codegen.py  test_parsing.py  test_storage.py
